--- a/Shopper Logger/View/Base.lproj/Main.storyboard
+++ b/Shopper Logger/View/Base.lproj/Main.storyboard
@@ -18,8 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9mZ-FW-3Dh">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9mZ-FW-3Dh">
+                                <rect key="frame" x="0.0" y="44" width="414" height="808"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="orderCell" id="kHC-6K-dcv">
@@ -35,17 +36,11 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9mZ-FW-3Dh" secondAttribute="trailing" id="99a-rb-ekU"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9mZ-FW-3Dh" secondAttribute="bottom" id="I3a-T9-aZL"/>
-                            <constraint firstItem="9mZ-FW-3Dh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Yg1-TU-0xn"/>
-                            <constraint firstItem="9mZ-FW-3Dh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xgf-gy-9Or"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Shopper Logger" largeTitleDisplayMode="always" id="nS8-XC-F5x">
                         <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="7IS-Rj-KfC">
                             <connections>
-                                <segue destination="hc6-qb-Gho" kind="presentation" id="Tst-Z3-hSg"/>
+                                <segue destination="hc6-qb-Gho" kind="show" id="Tst-Z3-hSg"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -180,11 +175,11 @@
             <objects>
                 <viewController id="hc6-qb-Gho" customClass="OrderLogViewController" customModule="Shopper_Logger" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wre-R7-MmP">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="9sg-Dq-E4w">
-                                <rect key="frame" x="20" y="20" width="374" height="768"/>
+                                <rect key="frame" x="20" y="160" width="374" height="682"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SyO-vk-fOh">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="37"/>
@@ -203,7 +198,7 @@
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NoV-sx-3Mi">
-                                        <rect key="frame" x="0.0" y="333" width="374" height="113"/>
+                                        <rect key="frame" x="0.0" y="333" width="374" height="30"/>
                                         <color key="backgroundColor" name="AccentColor"/>
                                         <state key="normal" title="Add Photos">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -213,7 +208,7 @@
                                         </connections>
                                     </button>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="TyC-xL-DX1">
-                                        <rect key="frame" x="0.0" y="469" width="374" height="246"/>
+                                        <rect key="frame" x="0.0" y="386" width="374" height="243"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="20" sectionInsetReference="safeArea" id="pye-RW-Xxg">
                                             <size key="itemSize" width="128" height="128"/>
@@ -221,45 +216,10 @@
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
-                                        <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="1000" contentMode="center" reuseIdentifier="ImageView" id="IeU-Oc-u8N" customClass="PhotoCollectionViewCell" customModule="Shopper_Logger" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="EN9-Bl-dmh">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.fill" catalog="system" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YZN-Qe-NdC">
-                                                            <rect key="frame" x="0.0" y="-1" width="128" height="129"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="128" id="G6P-aY-pR5"/>
-                                                                <constraint firstAttribute="height" constant="128" id="ob9-mh-EZO"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="YZN-Qe-NdC" secondAttribute="bottom" id="3GW-yW-4jh"/>
-                                                        <constraint firstItem="YZN-Qe-NdC" firstAttribute="leading" secondItem="EN9-Bl-dmh" secondAttribute="leading" id="8C8-Aq-EEb"/>
-                                                        <constraint firstAttribute="trailing" secondItem="YZN-Qe-NdC" secondAttribute="trailing" id="nN8-QL-V55"/>
-                                                        <constraint firstItem="YZN-Qe-NdC" firstAttribute="top" secondItem="EN9-Bl-dmh" secondAttribute="top" id="sMh-VM-BWI"/>
-                                                    </constraints>
-                                                </collectionViewCellContentView>
-                                                <connections>
-                                                    <outlet property="photo" destination="YZN-Qe-NdC" id="kGY-Fn-7sD"/>
-                                                </connections>
-                                            </collectionViewCell>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Cby-OQ-kI2">
-                                                <rect key="frame" x="246" y="0.0" width="128" height="128"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Nrx-eN-VBV">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </collectionViewCellContentView>
-                                            </collectionViewCell>
-                                        </cells>
+                                        <cells/>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6P8-1p-3hf">
-                                        <rect key="frame" x="0.0" y="738" width="374" height="30"/>
+                                        <rect key="frame" x="0.0" y="652" width="374" height="30"/>
                                         <color key="backgroundColor" name="AccentColor"/>
                                         <state key="normal" title="Log Order">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
