--- a/Shopper Logger/View/Base.lproj/Main.storyboard
+++ b/Shopper Logger/View/Base.lproj/Main.storyboard
@@ -216,7 +216,34 @@
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
-                                        <cells/>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="ImageView" id="DHj-Nl-A6D" customClass="PhotoCollectionViewCell" customModule="Shopper_Logger" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mNw-Mf-GTp">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u0P-jL-Ln6">
+                                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="128" id="0Dq-86-mOd"/>
+                                                                <constraint firstAttribute="width" constant="128" id="5h2-jB-zkz"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="u0P-jL-Ln6" firstAttribute="top" secondItem="mNw-Mf-GTp" secondAttribute="top" id="WuX-en-iDP"/>
+                                                        <constraint firstAttribute="bottom" secondItem="u0P-jL-Ln6" secondAttribute="bottom" id="fxJ-C2-L51"/>
+                                                        <constraint firstAttribute="trailing" secondItem="u0P-jL-Ln6" secondAttribute="trailing" id="rS6-wn-Cax"/>
+                                                        <constraint firstItem="u0P-jL-Ln6" firstAttribute="leading" secondItem="mNw-Mf-GTp" secondAttribute="leading" id="rtD-rt-usa"/>
+                                                    </constraints>
+                                                </collectionViewCellContentView>
+                                                <connections>
+                                                    <outlet property="photo" destination="u0P-jL-Ln6" id="gfC-zu-mB1"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6P8-1p-3hf">
                                         <rect key="frame" x="0.0" y="652" width="374" height="30"/>
