Save images to File Directory instead of Core Data as binary data... Pending delete function and Core Data entity migration

--- a/Shopper Logger/View/Base.lproj/Main.storyboard
+++ b/Shopper Logger/View/Base.lproj/Main.storyboard
@@ -187,9 +187,9 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Write notes here :)" translatesAutoresizingMaskIntoConstraints="NO" id="J46-vx-R24">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J46-vx-R24">
                                         <rect key="frame" x="0.0" y="60" width="374" height="250"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="250" id="pvb-pd-H6y"/>
                                         </constraints>
@@ -312,6 +312,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
